square image 556 on mobile 100% width fix

--- a/stylesheets/organisms/_work-showcase.scss
+++ b/stylesheets/organisms/_work-showcase.scss
@@ -118,7 +118,7 @@
 
 		float: left;
 		width: 100%;
-    	@include rem(max-width, 300px);
+    	//@include rem(max-width, 300px);
     	@include rem(margin-bottom, 16px);
 
 		> div { 
